<resources>
    <string name="app_name">Мои фильмы</string>

    <string name="search_hint">Введите название</string>

    <string name="main_title">Что будете смотреть\nсегодня?</string>
    <string name="recommended">Рекомендуем</string>
    <string name="popular">Популярные</string>
    <string name="upcoming">Новинки</string>

    <string name="home">Главная</string>

    <string name="more">Ещё…</string>
    <string name="tv_shows">Сериалы</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="later">44\n Буду смотреть</string>

    <string name="tv_show">Телесериалы</string>
    <string name="close">закрыть</string>

    <string-array name="tab_titles">
        <item>23\n Понравилось</item>
        <item>@string/later</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Пёс Киноман</string>
    <string name="show">Смотреть</string>
    <string name="tv_studio">Студия</string>
    <string name="tv_genre">Жанр</string>
    <string name="tv_year">Год</string>
    <string name="describe">Во время экскурсии в научном институте школьника Питера Паркера кусает облученный радиацией паук. Как следствие - у молодого человека развиваются способности, которыми обладают только пауки. Теперь он может лазить по стенам и потолкам, делать подобие паутины. Также у него развивается чувство, которое помогает чувствовать приближающуюся опасность. Назвавшись Человеком-пауком Питер поначалу пытается использовать новые возможности своего организма, чтобы зарабатывать деньги. Однако после того, как его дядя погибает от рук преступников, Питер решает использовать свои силы для борьбы со злом.</string>
</resources>
